src/kubernetes/monolith.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monolith
  namespace: cinemaabyss
  labels:
    app: monolith
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monolith
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: monolith
    spec:
      containers:
        - name: monolith
          #        image:  ghcr.io/db-exp/cinemaabysstest/monolith:latest
          image: ghcr.io/andruschenco/architecture-pro-cinemaabyss/monolith:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "100m"
              memory: "128Mi"
          readinessProbe:
            httpGet:
              path: /api/users
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/users
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
      restartPolicy: Always
      imagePullSecrets:
        - name: dockerconfigjson
---
apiVersion: v1
kind: Service
metadata:
  name: monolith
  namespace: cinemaabyss
spec:
  selector:
    app: monolith
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
