src/kubernetes/proxy-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy-service
  namespace: cinemaabyss
  labels:
    app: proxy-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy-service
  template:
    metadata:
      labels:
        app: proxy-service
    spec:
      containers:
        - name: proxy-service
          #          image: ghcr.io/your-org/your-repo/proxy-service:latest
          image: ghcr.io/andruschenco/architecture-pro-cinemaabyss/proxy-service:latest
          command: [ "uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000" ]
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health   # добавьте этот эндпоинт в прокси, если его нет
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 15

---
apiVersion: v1
kind: Service
metadata:
  name: proxy-service
  namespace: cinemaabyss
spec:
  selector:
    app: proxy-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
#  type: ClusterIP
  type: LoadBalancer
